--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2226,7 +2226,7 @@ node_types:
     derived_from: tosca.nodes.SoftwareComponent
     artifacts:
       hadoop_role:
-        file: indigo-dc.hadoop
+        file: indigo-dc.hadoop,v1.1.0-dodas-rc1
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
@@ -2243,7 +2243,7 @@ node_types:
         type: string
     artifacts:
       hadoop_role:
-        file: indigo-dc.hadoop
+        file: indigo-dc.hadoop,v1.1.0-dodas-rc1
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
