--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2088,7 +2088,7 @@ node_types:
       admin_token:
         required: no
         type: string
-        value: some_insecure_token
+        default: some_insecure_token
     artifacts:
       kube_role:
         file: grycap.kubernetes
