Add default worker ips list

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2257,6 +2257,7 @@ node_types:
       worker_ips:
         required: no
         type: list
+        default: [ 'localhost' ]
       yarn:
         required: no
         default: false
