--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -775,7 +775,7 @@ node_types:
             refdata_cvmfs_proxy_port: { get_property: [ SELF, refdata_cvmfs_proxy_port ] }
             refdata_dir: { get_property: [ SELF, refdata_dir ] }
 
-  tosca.nodes.indigo.TeskPortal:
+  tosca.nodes.indigo.TeskAPI:
     derived_from: tosca.nodes.WebServer
     properties:
       auth_mode:
