--- a/artifacts/lrms/kubernetes/kube_fe_install.yml
+++ b/artifacts/lrms/kubernetes/kube_fe_install.yml
@@ -25,4 +25,4 @@
     kube_apiserver_options: [{option: "--service-node-port-range", value: "8000-35000"}, {option: "--insecure-port", value: "8080"}, {option: "--token-auth-file", value: "/etc/kubernetes/pki/auth"}]
     kube_deploy_dashboard: true
     kube_install_helm: true
-    kube_version: 1.12.2
+    kube_version: latest
